--- a/computer_vision/global_map_generator/CMakeLists.txt
+++ b/computer_vision/global_map_generator/CMakeLists.txt
@@ -23,6 +23,6 @@ include_directories(${catkin_INCLUDE_DIRS})
 include_directories(${OpenCV_INCLUDE_DIRS})
 include_directories(include)
 
-add_executable(global_map_publisher src/global_map_publisher.cpp ${HEADERS} ${SOURCES})
-add_dependencies(global_map_publisher ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(global_map_publisher ${catkin_LIBRARIES} ${OpenCV_LIBS})
+add_executable(global_map_pub src/global_map.cpp ${HEADERS} ${SOURCES})
+add_dependencies(global_map_pub ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+target_link_libraries(global_map_pub ${catkin_LIBRARIES} ${OpenCV_LIBS})
